[package]
name = "pbs-sys"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/pbs_sys-rs"
description = "rust bindings for PBSPro HPC job scheduler"
keywords = ["pbs", "hpc", "FFI"]

[dependencies]
bindgen = { version = "0.63", optional = true }
linked_list_c = { path = "../linked_list_c-rs" }

[build-dependencies]
bindgen = { version = "0.63", optional = true }

[features]
default = []
static = []
